Fixed some spacing I guess

--- a/receiver/receiver.css
+++ b/receiver/receiver.css
@@ -140,7 +140,12 @@ div#container {
 
 /* Cards */
 .gameboard .outline{ width: 100px; height: 100%; border: 0px solid black; text-align: center; }
-.gameboard .top{ text-align: left; margin-left: 5px; }
+.gameboard .top {
+  text-align: left;
+  margin-left: 5px;
+  padding-bottom: 15px;
+  margin-top: 10px;
+}
 .gameboard .bottom{ text-align: right; margin-right: 5px; }
 .gameboard .rounded{ border-radius:10px; }
 .gameboard .cardRed { color: #FF0000 }
